force-app/main/default/objects/Account/fields/Vendor_Portal__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Portal__c</fullName>
    <label>Vendor Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SupplyPro</fullName>
            </value>
            <value>
                <fullName>HomebuilderONE</fullName>
            </value>
            <value>
                <fullName>MetaViewer</fullName>
            </value>
            <value>
                <fullName>BuildPro</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Builder Portal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Cloudscape</fullName>
                <isActive>false</isActive>
                <label>Cloudscape</label>
            </value>
            <value>
                <fullName>HomebuilderONE (HB1)</fullName>
                <isActive>false</isActive>
                <label>HomebuilderONE (HB1)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>