force-app/main/default/objects/Account/fields/W9_On_File__c.field-meta.xml
<CustomField>
    <fullName>W9_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W-9 on File</label>
    <type>Checkbox</type>
</CustomField>