force-app/main/default/objects/Account/fields/Waiver_Of_Subrogation_Required__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Of_Subrogation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waiver of Subrogation Required</label>
    <type>Checkbox</type>
</CustomField>