force-app/main/default/objects/Account/fields/Warranty_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Contact_Email__c</fullName>
    <label>Warranty Contact — Email</label>
    <type>Email</type>
</CustomField>