force-app/main/default/objects/Account/fields/Warranty_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Contact_Name__c</fullName>
    <label>Warranty Contact — Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>