force-app/main/default/objects/Account/fields/Warranty_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Contact_Phone__c</fullName>
    <label>Warranty Contact — Phone</label>
    <type>Phone</type>
</CustomField>