force-app/main/default/objects/Account/fields/Warranty_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Period_Months__c</fullName>
    <label>Warranty Period (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>