force-app/main/default/objects/Account/fields/Warranty_Program__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Program__c</fullName>
    <inlineHelpText>e.g. 2-10 Home Buyers Warranty; Express Limited Warranty</inlineHelpText>
    <label>Warranty Program</label>
    <length>100</length>
    <type>Text</type>
</CustomField>