force-app/main/default/objects/Account/fields/Warranty_Timeline_Hours__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Timeline_Hours__c</fullName>
    <description>Hours after job completion that LOVING must respond to warranty callbacks for this builder. Common values: 24 (next business day), 72 (3 business days). Drives QI and callback SLA tracking.</description>
    <label>Warranty Response (Hours)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>