force-app/main/default/objects/Account/fields/Wheel_Washdown_Required__c.field-meta.xml
<CustomField>
    <fullName>Wheel_Washdown_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wheel Washdown Required</label>
    <type>Checkbox</type>
</CustomField>