force-app/main/default/objects/Account/fields/WO_Created__c.field-meta.xml
<CustomField>
    <fullName>WO_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WO Created</label>
    <type>Checkbox</type>
</CustomField>