force-app/main/default/objects/Account/fields/WO_ID__c.field-meta.xml
<CustomField>
    <fullName>WO_ID__c</fullName>
    <label>WO ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>