force-app/main/default/objects/Account/fields/Workers_Comp_Limit__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Limit__c</fullName>
    <label>Workers Comp Per-Employee Limit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>