force-app/main/default/objects/Account/fields/YTD_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YTD_Revenue__c</fullName>
    <description>Year-to-date revenue for this account. Maintained by LovingRollupBatch.</description>
    <label>YTD Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>