force-app/main/default/objects/Account/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>