force-app/main/default/objects/Account/recordTypes/Builder_Market.recordType-meta.xml
<RecordType>
    <fullName>Builder_Market</fullName>
    <active>true</active>
    <description>Division-level account under a Home Builder parent account.</description>
    <label>Division Builder</label>
</RecordType>