force-app/main/default/objects/Account/recordTypes/Builder_Parent.recordType-meta.xml
<RecordType>
    <fullName>Builder_Parent</fullName>
    <active>true</active>
    <description>National/corporate builder account.</description>
    <label>Home Builder</label>
</RecordType>