force-app/main/default/objects/Account/recordTypes/Commercial.recordType-meta.xml
<RecordType>
    <fullName>Commercial</fullName>
    <active>false</active>
    <label>Commercial</label>
</RecordType>