force-app/main/default/objects/Account/recordTypes/Design_and_Build.recordType-meta.xml
<RecordType>
    <fullName>Design_and_Build</fullName>
    <active>false</active>
    <label>Design Build</label>
</RecordType>