force-app/main/default/objects/Account/recordTypes/Home_Owner.recordType-meta.xml
<RecordType>
    <fullName>Home_Owner</fullName>
    <active>true</active>
    <label>Home Owner Account</label>
</RecordType>