force-app/main/default/objects/Account/recordTypes/NextDaySod.recordType-meta.xml
<RecordType>
    <fullName>NextDaySod</fullName>
    <active>true</active>
    <label>NextDaySod</label>
</RecordType>